    the x13binary (https://github.com/x13org/x13binary) package to access
    prebuilt binaries of X-13ARIMA-SEATS. Thanks to the fantastic work with Dirk
    Eddelbuettel on x13binary! Installing seasonal is now as simple as:
    install.packages('seasonal')

enhancements
  - basic X-13 tests on all CRAN platforms (except Solaris)

documentation
  - updated documentation to reflect the new installation process
  - new example in ?genhol
  - improved description of examples in ?import.spc

bug fixes
  - fix for rare convergence error messages
  - annual series are now recognized
  - 'inspect' call evaluated in global env. This solves an issue with series 
    that had the same name as primitive functions (e.g., 'prod').
  - seas can be imported and used without loading the namespace 
    (e.g. seasonal::seas())
  - plot.seas: fixed wrong sign in transfom = "PC" and "PCY"

defunct
- slidingspans, revisions, regressioneffects are removed from the package


1.1.0  2015-10-08
--------------------------------------------------------------------------------

bug fixes
  - single series are dimension-less ts objects, rather than n times 1 matrices
  - more precise error msg in parse_spc

documentation
  - updated links to vignette and examples
  - new example in series


1.0.0  2015-08-14
--------------------------------------------------------------------------------

new features
  - experimental import.spc, to read existing .spc files into R. 
    Thanks, Brian Monsell.
  - experimental import.ts, to read existing X-13 data files into R.
  - with 'seats = NULL', seasonal adjustment can be completly turned of, to use
    X-13 for other purposes than seasonal adjustment.

enhancements
  - within-session parallelization: the temporary location name of the X13 run 
    now changes each time, which makes the function suitable for within-session
    parallelization (e.g., with mclapply). Cluster parallelization using 