@@ -2,16 +2,16 @@
 #' 
 #' Utility function to import \code{.spc} files from X-13. It generates a list
 #' of calls to \code{seas} (and  \code{import.ts}) that can be run in R.
-#' Evaluating these calls should perform the same X-13 run as the original
+#' Evaluating these calls should perform the same X-13 procedure as the original
 #' \code{.spc} file. The \code{print} method displays the calls in a way that 
 #' they can be copy-pasted into an R script.
 #' 
 #' @param file   character, name of the X-13 \code{.spc} file
 #' @return returns an object of class \code{import.spc}, which is a list with the following (optional) objects of class \code{call}:
-#'   \item{call}{the call to \code{\link{seas}}}
 #'   \item{x}{the call to retrieve the data for the input series} 
 #'   \item{xtrans}{the call to retrieve the data for the \code{xtrans} series (if required by the call)} 
 #'   \item{xreg}{the call to retrieve the data for the \code{xreg} series (if required by the call)} 
+#'   \item{seas}{the call to \code{\link{seas}}}
 #' @export
 #' @seealso \code{\link{import.ts}}, for importing X-13 data files.
 #' @seealso \code{\link{seas}} for the main function of seasonal.
@@ -36,23 +36,24 @@
 #' # importing the .spc file from the temporary location
 #' ll <- import.spc(file.path(tdir, "iofile.spc"))
 #' 
-#' # ll is list containing 4 calls: 
-#' # - 3 calls to import.ts(), which read the series from the X-13 data files
-#' # - and 1 call to seas() which performs the seasonal adjustment in R
+#' # ll is list containing four calls: 
+#' # - 'll$x', 'll$xreg' and 'll$xtrans': calls to import.ts(), which read the
+#' #   series from the X-13 data files
+#' # - 'll$seas': a call to seas() which performs the seasonal adjustment in R
 #' str(ll)
 #'
-#' # to replicate the original X-13 operation, run all 4 calls. You can either
-#' # copy/paste and run the print() output:
+
+#' # to replicate the original X-13 operation, run all four calls in a series.
+#' # You can either copy/paste and run the print() output:
 #' ll
 #' 
 #' # or use eval() to evaluate the call(s). To evaluate the first call and
 #' # import the x variable:
 #' eval(ll$x)
 #' 
-#' # to run all 4 calls, use lapply() and eval() to evaluate all calls in the
-#' # list:
+#' # to run all four calls in 'll', use lapply() and eval():
 #' ee <- lapply(ll, eval, envir = globalenv())
-#' ee$call  # the 'seas' object, produced by the final call to seas()
+#' ee$seas  # the 'seas' object, produced by the final call to seas()
 #' }
 import.spc <- function(file){
   
@@ -60,14 +61,9 @@ import.spc <- function(file){
 
   z <- list()
 
-  # file <- "~/Desktop/Testairline.spc"
-  # file <- "/Users/christoph/tmp/iofile.spc"
-  # file <- "/Users/christoph/tmp/urtest2.spc"
-
   txt <- readLines(file)
   txt <- gsub("\\\\", "/", txt)  # window file names to unix
   txt <- gsub("#.*$", "", txt) # remove comments
-
 
   # keep everything lowercase, except filenames
   pp.cap <- parse_spc(txt)
@@ -75,7 +71,6 @@ import.spc <- function(file){
   pp[['series']][['file']] <- pp.cap[['series']][['file']]
   pp[['transform']][['file']] <- pp.cap[['transform']][['file']]
   pp[['regression']][['file']] <- pp.cap[['regression']][['file']]
-
 
   xstr <- ext_ser_call(pp$series, "x")
   xregstr <- ext_ser_call(pp$regression, "xreg")
@@ -101,7 +96,7 @@ import.spc <- function(file){
   z$xtrans <- if (!is.null(xtransstr)) parse(text = xtransstr)[[1]]
   z$xreg <- if (!is.null(xregstr)) parse(text = xregstr)[[1]]
 
-  z$call <- as.call(c(quote(seas), ep))
+  z$seas <- as.call(c(quote(seas), ep))
 
   class(z) <- "import.spc"
   z
@@ -115,15 +110,15 @@ import.spc <- function(file){
 #' @param ... further arguments, not used
 print.import.spc <- function(x, ...){
 
-  inps <- x[!names(x) == "call"]
+  inps <- x[!names(x) == "seas"]
   if (length(inps) > 0){
-    cat("# input series\n")
-    lapply(x[!names(x) == "call"], print)
+    cat("## import input series\n")
+    lapply(x[!names(x) == "seas"], print)
     cat("\n")
   }
 
-  cat("# call\n")
-  print(x$call)
+  cat("## main call to 'seas'\n")
+  print(x$seas)
 }
 
 
@@ -439,7 +434,6 @@ import_fortran <- function(file, format, frequency, start = NULL, name = NULL){
   }
   z
 }
-
 
 
 import_tramo <- function(file){
