@@ -149,15 +149,14 @@ ts.plot(final(m4), final(m5), col = c("red", "black"))
 plot(series(m4, "regression.holiday"))
 
 
-### Using genhol to re-estimate regARIMA estimation in R
+### Using genhol to replicate the regARIMA estimation in R
 
 # easter regressor
 ea <- genhol(easter, start = -1, end = -1, center = "calendar")
 ea <- window(ea, start = start(AirPassengers), end = end(AirPassengers))
 
 # estimating ARIMA model in R base
-arima(log(AirPassengers), order = c(0,1,1), 
-      seasonal = list(order = c(0,1,1)), xreg = ea)
+arima(log(AirPassengers), order = c(0,1,1), seasonal = c(0,1,1), xreg = ea)
     
 summary(seas(AirPassengers, regression.variables = c("easter[1]"), 
              regression.aictest = NULL))
