@@ -18,15 +18,15 @@ import.spc(file)
 }
 \value{
 returns an object of class \code{import.spc}, which is a list with the following (optional) objects of class \code{call}:
-  \item{call}{the call to \code{\link{seas}}}
   \item{x}{the call to retrieve the data for the input series} 
   \item{xtrans}{the call to retrieve the data for the \code{xtrans} series (if required by the call)} 
-  \item{xreg}{the call to retrieve the data for the \code{xreg} series (if required by the call)}
+  \item{xreg}{the call to retrieve the data for the \code{xreg} series (if required by the call)} 
+  \item{seas}{the call to \code{\link{seas}}}
 }
 \description{
 Utility function to import \code{.spc} files from X-13. It generates a list
 of calls to \code{seas} (and  \code{import.ts}) that can be run in R.
-Evaluating these calls should perform the same X-13 run as the original
+Evaluating these calls should perform the same X-13 procedure as the original
 \code{.spc} file. The \code{print} method displays the calls in a way that 
 they can be copy-pasted into an R script.
 }
@@ -51,23 +51,23 @@ seas(x = AirPassengers, xreg = cbind(a = genhol(cny, start = 1, end = 4,
 # importing the .spc file from the temporary location
 ll <- import.spc(file.path(tdir, "iofile.spc"))
 
-# ll is list containing 4 calls: 
-# - 3 calls to import.ts(), which read the series from the X-13 data files
-# - and 1 call to seas() which performs the seasonal adjustment in R
+# ll is list containing four calls: 
+# - 'll$x', 'll$xreg' and 'll$xtrans': calls to import.ts(), which read the
+#   series from the X-13 data files
+# - 'll$seas': a call to seas() which performs the seasonal adjustment in R
 str(ll)
 
-# to replicate the original X-13 operation, run all 4 calls. You can either
-# copy/paste and run the print() output:
+# to replicate the original X-13 operation, run all four calls in a series.
+# You can either copy/paste and run the print() output:
 ll
 
 # or use eval() to evaluate the call(s). To evaluate the first call and
 # import the x variable:
 eval(ll$x)
 
-# to run all 4 calls, use lapply() and eval() to evaluate all calls in the
-# list:
+# to run all four calls in 'll', use lapply() and eval():
 ee <- lapply(ll, eval, envir = globalenv())
-ee$call  # the 'seas' object, produced by the final call to seas()
+ee$seas  # the 'seas' object, produced by the final call to seas()
 }
 }
 \seealso{
